name:                RackSort
version:             0.0.0.0
author:              Jonathan Taylor
maintainer:          jonathan.taylor@dsl.pipex.com
build-type:          Simple
cabal-version:       >= 1.10

library
    hs-source-dirs:     src
    exposed-modules:    RackSortLib, RackSortPrintLib
    default-language:   Haskell2010
    build-depends:      base >=4.7 && <4.8, ansi-terminal, split

executable RackSort
    hs-source-dirs:     src
    Main-Is:            RackSort.hs
    build-depends:      base >=4.7 && <4.8, ansi-terminal, split
    default-language:   Haskell2010

test-suite UnitTests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            UnitTests.hs
    build-depends:      base >=4.7 && <4.8, HUnit, RackSort
    default-language:   Haskell2010

test-suite PropertyTests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            PropertyTests.hs
    build-depends:      base >=4.7 && <4.8, QuickCheck, RackSort
    default-language:   Haskell2010
